Coop Diff: Expander applied to bottom of content sections

--- a/the-cooperative-difference.htm
+++ b/the-cooperative-difference.htm
@@ -222,28 +222,31 @@
 					</div>
 				</div>
 
-				<!-- Expandable Content -->
-				<div class="ts-expandable px-8 pt-12 pb-16" data-expandable>
+				<!-- Content that was previously in the expander but now sits outside -->
+				<div class="px-8 pt-12 mx-auto max-w-2xl text-center text-balance">
+					<h3 class="font-serif font-light text-lg">New ERA</h3>
+					<p>Tri-State was recently awarded $2.5 billion in financing through the U.S. Department of
+						Agriculture's Empowering Rural
+						America (New ERA) Program. This program is the most significant federal funding for rural
+						electric cooperatives since
+						1936 and will help to further our investments to meet growing energy demand and improve the
+						reliability and resiliency
+						of our system.</p>
+
+					<p><strong>The program, designed to help rural cooperatives implement reliable and affordable
+							energy transitions, will support the
+							building of new energy projects as well as the retirement of outdated sites.</strong>
+						These projects will fight high energy costs
+						and help our members reach 70% clean energy used in 2030, reducing greenhouse gas emissions
+						by nearly 5.8 million tons
+						annually.</p>
+
+					<h3 class="mt-8 font-serif font-light text-lg">Electric Resource Planning</h3>
+				</div>
+
+				<!-- Expandable Content - now only contains paragraphs after "Electric Resource Planning" -->
+				<div class="ts-expandable px-8 pb-16" data-expandable>
 					<div class="ts-expander mx-auto max-w-2xl text-center text-balance">
-						<h3 class="font-serif font-light text-lg">New ERA</h3>
-						<p>Tri-State was recently awarded $2.5 billion in financing through the U.S. Department of
-							Agriculture’s Empowering Rural
-							America (New ERA) Program. This program is the most significant federal funding for rural
-							electric cooperatives since
-							1936 and will help to further our investments to meet growing energy demand and improve the
-							reliability and resiliency
-							of our system.</p>
-
-						<p><strong>The program, designed to help rural cooperatives implement reliable and affordable
-								energy transitions, will support the
-								building of new energy projects as well as the retirement of outdated sites.</strong>
-							These projects will fight high energy costs
-							and help our members reach 70% clean energy used in 2030, reducing greenhouse gas emissions
-							by nearly 5.8 million tons
-							annually.</p>
-
-
-						<h3 class="mt-8 font-serif font-light text-lg">Electric Resource Planning</h3>
 						<p>
 							Our Electric Resource Plan (ERP) is central to our work to serve our members and meet our
 							regulatory requirements as we pursue various energy investments. The process includes
@@ -301,32 +304,36 @@
 					</div>
 				</div>
 
-				<!-- Expandable Content -->
-				<div class="ts-expandable px-8 pt-12 pb-16" data-expandable>
-					<div class="ts-expander mx-auto max-w-2xl text-center text-balance">
-						<h3 class="font-serif font-light text-lg">Wildfire Mitigation</h3>
-						<p>
-							High temperatures and dry conditions across our service area makes the region susceptible to
-							wildfires. To protect the people and ecosystems we serve and provide reliable energy,
-							Tri-State has developed an approach that focuses on situational awareness. We're using tools
-							like drones and weather monitoring to analyze risk reduction and are in constant
-							communication with land managers, fire districts and other utilities to properly assess and
-							manage risk. The data we collect allows us to better understand the breadth of challenges
-							posed by wildfires and we're working hard to reduce risk through an average of 3,500
-							man-hours per year in vegetation management and clearing.
-						</p>
-						<p>
-							To complement our regional efforts, our staff regularly coordinates with federal agencies.
-							We are also uniquely positioned to have ongoing wildfire mitigation conversations with
-							relevant agencies and industry partners through the Electricity Subsector Coordinating
-							Council (ESCC) Wildfire Working Group.
-						</p>
-						<a href="https://tristate.coop/wildfire-mitigation"
-							class="mb-6 inline-flex rounded-full border border-black px-4 py-2 font-normal no-underline text-black">
-							View Wildfire Mitigation Plan
-						</a>
+				<!-- Content that was previously in the expander but now sits outside -->
+				<div class="px-8 pt-12 mx-auto max-w-2xl text-center text-balance">
+					<h3 class="font-serif font-light text-lg">Wildfire Mitigation</h3>
+					<p>
+						High temperatures and dry conditions across our service area makes the region susceptible to
+						wildfires. To protect the people and ecosystems we serve and provide reliable energy,
+						Tri-State has developed an approach that focuses on situational awareness. We're using tools
+						like drones and weather monitoring to analyze risk reduction and are in constant
+						communication with land managers, fire districts and other utilities to properly assess and
+						manage risk. The data we collect allows us to better understand the breadth of challenges
+						posed by wildfires and we're working hard to reduce risk through an average of 3,500
+						man-hours per year in vegetation management and clearing.
+					</p>
+					<p>
+						To complement our regional efforts, our staff regularly coordinates with federal agencies.
+						We are also uniquely positioned to have ongoing wildfire mitigation conversations with
+						relevant agencies and industry partners through the Electricity Subsector Coordinating
+						Council (ESCC) Wildfire Working Group.
+					</p>
+					<a href="https://tristate.coop/wildfire-mitigation"
+						class="mb-6 inline-flex rounded-full border border-black px-4 py-2 font-normal no-underline text-black">
+						View Wildfire Mitigation Plan
+					</a>
 
-						<h3 class="mt-8 font-serif font-light text-lg">Workplace Safety</h3>
+					<h3 class="mt-8 font-serif font-light text-lg">Workplace Safety</h3>
+				</div>
+
+				<!-- Expandable Content - now only contains paragraphs after "Workplace Safety" -->
+				<div class="ts-expandable px-8 pb-16" data-expandable>
+					<div class="ts-expander mx-auto max-w-2xl text-center text-balance">
 						<p>
 							Safety is our core value, and we put the safety of our employees, contractors and
 							communities above all else. We are committed to shaping a culture of safety, where every
@@ -346,7 +353,6 @@
 							having a serious injury, and three employees received awards from the Colorado Mining
 							Association for 30 years without injury.
 						</p>
-
 					</div>
 
 					<div class="flex justify-center items-center">
@@ -363,7 +369,7 @@
 
 
 
-			<section id="good-neighbors">
+			<div id="good-neighbors">
 				<!-- Hero Image -->
 				<div class="relative flex flex-col justify-center min-h-[40vh] lg:h-[300px] lg:min-h-0">
 					<img src="https://tristate.coop/sites/default/files/2025-05/homes-under-construction.jpg"
@@ -388,26 +394,30 @@
 					</div>
 				</div>
 
-				<!-- Expandable Content -->
-				<div class="ts-expandable px-8 pt-12 pb-16" data-expandable>
-					<div class="ts-expander mx-auto max-w-2xl text-center text-balance">
-						<h3 class="font-serif font-light text-lg">Community Engagement/Charitable Giving</h3>
-						<p>
-							Tri-State is committed to giving back to the rural communities in which we operate,
-							supporting community organizations and charities like 4-H, Cooperative Family Fund, Future
-							Farmers of America, and other rural-focused groups across Nebraska, Colorado, New Mexico and
-							Wyoming. We also encourage our employees to give back. In 2024, Tri-State employees
-							volunteered in their communities for a total of 456 hours. Employees have the flexibility to
-							choose which organizations they would like to support, allowing them to participate in the
-							causes they find most impactful to their communities.
-						</p>
-						<p>
-							Tri-State has also supported our employee efforts by matching employee donations to
-							non-profit organizations of their choosing. Most recently, employees and Tri-State donated
-							over $246,000 to 73 chosen charities, bettering communities across the Western states.
-						</p>
+				<!-- Content that was previously in the expander but now sits outside -->
+				<div class="px-8 pt-12 mx-auto max-w-2xl text-center text-balance">
+					<h3 class="font-serif font-light text-lg">Community Engagement/Charitable Giving</h3>
+					<p>
+						Tri-State is committed to giving back to the rural communities in which we operate,
+						supporting community organizations and charities like 4-H, Cooperative Family Fund, Future
+						Farmers of America, and other rural-focused groups across Nebraska, Colorado, New Mexico and
+						Wyoming. We also encourage our employees to give back. In 2024, Tri-State employees
+						volunteered in their communities for a total of 456 hours. Employees have the flexibility to
+						choose which organizations they would like to support, allowing them to participate in the
+						causes they find most impactful to their communities.
+					</p>
+					<p>
+						Tri-State has also supported our employee efforts by matching employee donations to
+						non-profit organizations of their choosing. Most recently, employees and Tri-State donated
+						over $246,000 to 73 chosen charities, bettering communities across the Western states.
+					</p>
 
-						<h3 class="mt-8 font-serif font-light text-lg">Consumer Programs</h3>
+					<h3 class="mt-8 font-serif font-light text-lg">Consumer Programs</h3>
+				</div>
+
+				<!-- Expandable Content - now only contains paragraphs after "Consumer Programs" -->
+				<div class="ts-expandable px-8 pb-16" data-expandable>
+					<div class="ts-expander mx-auto max-w-2xl text-center text-balance">
 						<p>
 							Tri-State's commitment to affordability extends beyond the grid. Our On-Bill Repayment
 							program aims to make energy efficiency and electrification updates more accessible for
@@ -436,7 +446,7 @@
 						</a>
 					</div>
 				</div>
-			</section>
+			</div>
 
 
 
@@ -462,22 +472,26 @@
 					</div>
 				</div>
 
-				<!-- Expandable Content -->
-				<div class="ts-expandable px-8 pt-12 pb-16" data-expandable>
-					<div class="ts-expander mx-auto max-w-2xl text-center text-balance">
-						<h3 class="font-serif font-light text-lg">Cooperative Governance</h3>
-						<p>
-							Tri-State's cooperative model and member-led governance structure differentiates us from
-							other, for-profit corporate utilities. We're proud to say that our 43 member-owners and
-							board of representatives, appointed by 40 distribution utility members, have a seat at the
-							table. The Board determines business decisions, sets priorities, makes policy decisions, and
-							guides strategic planning for Tri-State initiatives, offering each utility member the
-							opportunity to bring their unique voices to the forefront. Tri-State truly operates by the
-							people and for the people, bringing transparency to our governance and giving everyone a
-							platform to make their voices heard.
-						</p>
+				<!-- Content that was previously in the expander but now sits outside -->
+				<div class="px-8 pt-12 mx-auto max-w-2xl text-center text-balance">
+					<h3 class="font-serif font-light text-lg">Cooperative Governance</h3>
+					<p>
+						Tri-State's cooperative model and member-led governance structure differentiates us from
+						other, for-profit corporate utilities. We're proud to say that our 43 member-owners and
+						board of representatives, appointed by 40 distribution utility members, have a seat at the
+						table. The Board determines business decisions, sets priorities, makes policy decisions, and
+						guides strategic planning for Tri-State initiatives, offering each utility member the
+						opportunity to bring their unique voices to the forefront. Tri-State truly operates by the
+						people and for the people, bringing transparency to our governance and giving everyone a
+						platform to make their voices heard.
+					</p>
 
-						<h3 class="mt-8 font-serif font-light text-lg">Flexibility/BYOR</h3>
+					<h3 class="mt-8 font-serif font-light text-lg">Flexibility/BYOR</h3>
+				</div>
+
+				<!-- Expandable Content - now only contains paragraphs after "Flexibility/BYOR" -->
+				<div class="ts-expandable px-8 pb-16" data-expandable>
+					<div class="ts-expander mx-auto max-w-2xl text-center text-balance">
 						<p>
 							Our Bring Your Own Resource program provides flexibility to Tri-State members by allowing
 							them to develop their own projects that reflect the unique advantages and needs in their
