--- a/the-cooperative-difference.htm
+++ b/the-cooperative-difference.htm
@@ -18,6 +18,7 @@
 	<link href="https://fonts.googleapis.com/css2?family=Aleo:wght@300;@400;700&display=swap" rel="stylesheet" />
 
 	<!-- Global Styles -->
+
 	<link rel="stylesheet"
 		href="https://tristate.coop/sites/default/files/css/css_-UFRzSpfx2tStwj5bYydlkhBR3LXL-MLhjJ2dqKU_nw.css" />
 	<link rel="stylesheet"
@@ -137,7 +138,7 @@
 					</div>
 				</div>
 			</section>
-			<section class="px-8 py-16">
+			<section class="px-8 py-16" id="cooperative-principles">
 				<div class="mx-auto max-w-xl text-center">
 					<p class="!text-lg font-serif">
 						These investments would not be successful without the collaborative efforts of our members,
@@ -145,48 +146,42 @@
 					</p>
 				</div>
 
-				<div class="mx-auto mt-8 text-center md:flex md:flex-wrap md:justify-center">
-					<div class="md:basis-1/3 flex flex-col">
-						<div class="m-2 bg-gray-light text-xl md:text-2xl p-4 rounded flex-1">
-							<div class="font-bold">1</div>
-							<div class="mt-2">Open and voluntary membership</div>
-						</div>
+				<div class="mx-auto mt-8 text-center grid gap-4 md:grid-cols-8 lg:grid-cols-16">
+					<!-- Item 1 -->
+					<div class="bg-gray-light rounded p-4 text-xl md:text-2xl md:col-span-4">
+						<div class="font-bold">1</div>
+						<div class="mt-2">Open and voluntary membership</div>
 					</div>
-					<div class="md:basis-1/3 flex flex-col">
-						<div class="m-2 bg-gray-light text-xl md:text-2xl p-4 rounded flex-1">
-							<div class="font-bold">2</div>
-							<div class="mt-2">Democratic member control</div>
-						</div>
+					<!-- Item 2 -->
+					<div class="bg-gray-light rounded p-4 text-xl md:text-2xl md:col-span-4">
+						<div class="font-bold">2</div>
+						<div class="mt-2">Democratic member control</div>
 					</div>
-					<div class="md:basis-1/3 flex flex-col">
-						<div class="m-2 bg-gray-light text-xl md:text-2xl p-4 rounded flex-1">
-							<div class="font-bold">3</div>
-							<div class="mt-2">Members' economic participation</div>
-						</div>
+					<!-- Item 3 -->
+					<div class="bg-gray-light rounded p-4 text-xl md:text-2xl md:col-span-4">
+						<div class="font-bold">3</div>
+						<div class="mt-2">Members' economic participation</div>
 					</div>
-					<div class="md:basis-1/3 flex flex-col">
-						<div class="m-2 bg-gray-light text-xl md:text-2xl p-4 rounded flex-1">
-							<div class="font-bold">4</div>
-							<div class="mt-2">Autonomy and independence</div>
-						</div>
+					<!-- Item 4 -->
+					<div class="bg-gray-light rounded p-4 text-xl md:text-2xl md:col-span-4">
+						<div class="font-bold">4</div>
+						<div class="mt-2">Autonomy and independence</div>
 					</div>
-					<div class="md:basis-1/3 flex flex-col">
-						<div class="m-2 bg-gray-light text-xl md:text-2xl p-4 rounded flex-1">
-							<div class="font-bold">5</div>
-							<div class="mt-2">Education, training and information</div>
-						</div>
+					<!-- Item 5 -->
+					<div class="bg-gray-light rounded p-4 text-xl md:text-2xl md:col-span-4 lg:col-start-3">
+						<div class="font-bold">5</div>
+						<div class="mt-2">Education, training and information</div>
 					</div>
-					<div class="md:basis-1/3 flex flex-col">
-						<div class="m-2 bg-gray-light text-xl md:text-2xl p-4 rounded flex-1">
-							<div class="font-bold">6</div>
-							<div class="mt-2">Cooperation among cooperatives</div>
-						</div>
+					<!-- Item 6 -->
+					<div class="bg-gray-light rounded p-4 text-xl md:text-2xl md:col-span-4">
+						<div class="font-bold">6</div>
+						<div class="mt-2">Cooperation among cooperatives</div>
 					</div>
-					<div class="md:basis-1/3 flex flex-col">
-						<div class="m-2 bg-gray-light text-xl md:text-2xl p-4 rounded flex-1">
-							<div class="font-bold">7</div>
-							<div class="mt-2">Concern for community</div>
-						</div>
+					<!-- Item 7 - centered on tablet -->
+					<div
+						class="bg-gray-light rounded p-4 text-xl md:text-2xl md:col-span-4 md:col-start-3 lg:col-start-auto">
+						<div class="font-bold">7</div>
+						<div class="mt-2">Concern for community</div>
 					</div>
 				</div>
 
