--- a/annual-report-2024.htm
+++ b/annual-report-2024.htm
@@ -98,7 +98,7 @@
 		href="https://tristate.coop/sites/default/files/css/css_-UFRzSpfx2tStwj5bYydlkhBR3LXL-MLhjJ2dqKU_nw.css" />
 	<link rel="stylesheet"
 		href="https://tristate.coop/sites/default/files/asset_injector/css/ts_standards-c73c2df017737ccf23698c0b0736a119.css?sgj5sc" />
-	<link rel="stylesheet" href="assets/css/build.css" />
+	<link rel="stylesheet" href="assets/css/annual-reports.css" />
 
 	<!-- <script src="./assets/js/GSDevTools.min.js"></script>
 	<script src="./assets/js/ScrollSmoother.min.js"></script> -->
