Coop Diff: New 7 Principles grid

--- a/the-cooperative-difference.htm
+++ b/the-cooperative-difference.htm
@@ -146,42 +146,48 @@
 					</p>
 				</div>
 
-				<div class="mx-auto mt-8 text-center grid gap-4 md:grid-cols-8 lg:grid-cols-16">
+				<div class="mx-auto mt-8 grid gap-4 md:grid-cols-8 xl:grid-cols-16">
 					<!-- Item 1 -->
-					<div class="bg-gray-light rounded p-4 text-xl md:text-2xl md:col-span-4">
-						<div class="font-bold">1</div>
-						<div class="mt-2">Open and voluntary membership</div>
+					<div
+						class="bg-gray-light rounded text-xl overflow-hidden grid grid-cols-5 md:col-span-4 md:text-2xl lg:grid-cols-4">
+						<div class="font-bold p-2 md:p-4 text-center border-r">1</div>
+						<div class="py-2 px-4 col-span-4 lg:col-span-3">Open and voluntary membership</div>
 					</div>
 					<!-- Item 2 -->
-					<div class="bg-gray-light rounded p-4 text-xl md:text-2xl md:col-span-4">
-						<div class="font-bold">2</div>
-						<div class="mt-2">Democratic member control</div>
+					<div
+						class="bg-gray-light rounded text-xl overflow-hidden grid grid-cols-5 md:col-span-4 md:text-2xl lg:grid-cols-4">
+						<div class="font-bold p-2 md:p-4 text-center border-r">2</div>
+						<div class="py-2 px-4 col-span-4 lg:col-span-3">Democratic member control</div>
 					</div>
 					<!-- Item 3 -->
-					<div class="bg-gray-light rounded p-4 text-xl md:text-2xl md:col-span-4">
-						<div class="font-bold">3</div>
-						<div class="mt-2">Members' economic participation</div>
+					<div
+						class="bg-gray-light rounded text-xl overflow-hidden grid grid-cols-5 md:col-span-4 md:text-2xl lg:grid-cols-4">
+						<div class="font-bold p-2 md:p-4 text-center border-r">3</div>
+						<div class="py-2 px-4 col-span-4 lg:col-span-3">Members' economic participation</div>
 					</div>
 					<!-- Item 4 -->
-					<div class="bg-gray-light rounded p-4 text-xl md:text-2xl md:col-span-4">
-						<div class="font-bold">4</div>
-						<div class="mt-2">Autonomy and independence</div>
+					<div
+						class="bg-gray-light rounded text-xl overflow-hidden grid grid-cols-5 md:col-span-4 md:text-2xl lg:grid-cols-4">
+						<div class="font-bold p-2 md:p-4 text-center border-r">4</div>
+						<div class="py-2 px-4 col-span-4 lg:col-span-3">Autonomy and independence</div>
 					</div>
 					<!-- Item 5 -->
-					<div class="bg-gray-light rounded p-4 text-xl md:text-2xl md:col-span-4 lg:col-start-3">
-						<div class="font-bold">5</div>
-						<div class="mt-2">Education, training and information</div>
+					<div
+						class="bg-gray-light rounded text-xl overflow-hidden grid grid-cols-5 md:col-span-4 md:text-2xl lg:grid-cols-4 xl:md:col-start-3">
+						<div class="font-bold p-2 md:p-4 text-center border-r">5</div>
+						<div class="py-2 px-4 col-span-4 lg:col-span-3">Education, training and information</div>
 					</div>
 					<!-- Item 6 -->
-					<div class="bg-gray-light rounded p-4 text-xl md:text-2xl md:col-span-4">
-						<div class="font-bold">6</div>
-						<div class="mt-2">Cooperation among cooperatives</div>
+					<div
+						class="bg-gray-light rounded text-xl overflow-hidden grid grid-cols-5 md:col-span-4 md:text-2xl lg:grid-cols-4">
+						<div class="font-bold p-2 md:p-4 text-center border-r">6</div>
+						<div class="py-2 px-4 col-span-4 lg:col-span-3">Cooperation among cooperatives</div>
 					</div>
 					<!-- Item 7 - centered on tablet -->
 					<div
-						class="bg-gray-light rounded p-4 text-xl md:text-2xl md:col-span-4 md:col-start-3 lg:col-start-auto">
-						<div class="font-bold">7</div>
-						<div class="mt-2">Concern for community</div>
+						class="bg-gray-light rounded text-xl overflow-hidden grid grid-cols-5 md:col-span-4 md:text-2xl lg:grid-cols-4 md:col-start-3 xl:md:col-start-auto">
+						<div class="font-bold p-2 md:p-4 text-center border-r">7</div>
+						<div class="py-2 px-4 col-span-4 lg:col-span-3">Concern for community</div>
 					</div>
 				</div>
 
