Coop Diff: Move expander script to its own file

--- a/the-cooperative-difference.htm
+++ b/the-cooperative-difference.htm
@@ -527,17 +527,6 @@
 		</div><!-- .block-region-content -->
 	</main>
 </body>
-<script>
-	document.querySelectorAll('[data-expandable]').forEach(section => {
-		const button = section.querySelector('[data-expand-button]');
-		if (!button) return;
-
-		button.addEventListener('click', (e) => {
-			e.preventDefault();
-			section.classList.add('expanded');
-			button.classList.add('byebye');
-		});
-	});
-</script>
+<script src="./assets/js/ts-expander.js"></script>
 
 </html>
