AR: Placeholder image for final piece

--- a/annual-report-2025.htm
+++ b/annual-report-2025.htm
@@ -55,7 +55,7 @@
 	<!-- Two-Column Intro -->
 	<section class=" grid grid-cols-1 md:grid-cols-2 gap-8 max-w-6xl mx-auto">
 		<div class="relative w-full h-full flex items-center justify-center aspect-video md:aspect-auto">
-			<img src="https://placehold.co/800x600?text=Video+Still" alt="Video Background"
+			<img src="https://tristate.coop/sites/default/files/images/annual-report/800x600.png" alt="Video Background"
 				class="absolute inset-0 w-full h-full object-cover z-0" />
 			<!-- Video link with play button -->
 			<a class="relative" data-featherlight="iframe" data-featherlight-iframe-allowfullscreen="true"
