Coop Diff: Final edit
Maybe

--- a/the-cooperative-difference.htm
+++ b/the-cooperative-difference.htm
@@ -240,9 +240,9 @@
 					reliability and resiliency
 					of our system.</p>
 
-				<p><strong>The program, designed to help rural cooperatives implement reliable and affordable
-						energy transitions, will support the
-						building of new energy projects as well as the retirement of outdated sites.</strong>
+				<p>The program, designed to help rural cooperatives implement reliable and affordable
+					energy transitions, will support the
+					building of new energy projects as well as the retirement of outdated sites.
 					These projects will fight high energy costs
 					and help our members reach 70% clean energy used in 2030, reducing greenhouse gas emissions
 					by nearly 5.8 million tons
