AR: YouTube ID for video

--- a/annual-report-2025.htm
+++ b/annual-report-2025.htm
@@ -60,7 +60,7 @@
 			<!-- Video link with play button -->
 			<a class="relative" data-featherlight="iframe" data-featherlight-iframe-allowfullscreen="true"
 				data-featherlight-iframe-height="281" data-featherlight-iframe-width="500"
-				href="https://www.youtube.com/embed/dPFeHHoZVHw" target="_blank" rel="noopener">
+				href="https://www.youtube.com/embed/ChhAstN0jfw" target="_blank" rel="noopener">
 				<img alt="Play button" class="size-24 sm:size-44"
 					src="https://tristate.coop/sites/default/files/images/esg/play-video-thumbnail-cover.svg">
 			</a>
