AR: Video thumbs moved to tristate.coop

--- a/annual-report-2025.htm
+++ b/annual-report-2025.htm
@@ -55,10 +55,10 @@
 	<!-- Two-Column Intro -->
 	<section class=" grid grid-cols-1 md:grid-cols-2 gap-8 max-w-6xl mx-auto">
 		<div class="relative w-full h-full flex items-center justify-center aspect-video md:aspect-auto">
-			<img src="assets/images/annual-report/annual-meeting-video-thumb-one-line.png"
+			<img src="https://tristate.coop/sites/default/files/images/annual-report/2025/annual-meeting-video-thumb-one-line.png"
 				alt="2025 Tri-State Annual Meeting"
 				class="absolute inset-0 w-full h-full object-cover object-bottom z-0 sm:hideme lg:block" />
-			<img src="assets/images/annual-report/annual-meeting-video-thumb-stacked.png"
+			<img src="https://tristate.coop/sites/default/files/images/annual-report/2025/annual-meeting-video-thumb-stacked.png"
 				alt="2025 Tri-State Annual Meeting"
 				class="absolute inset-0 w-full h-full object-cover object-bottom z-0 hideme sm:block lg:hideme" />
 			<!-- Video link with play button -->
