AR: Adjustments and downloads section

--- a/annual-report-2025.htm
+++ b/annual-report-2025.htm
@@ -229,14 +229,15 @@
 
 			<div
 				class="relative bg-[#BDAD89] px-6 py-10 lg:bg-transparent lg:px-0 lg:py-0 lg:col-start-2 lg:row-start-2 lg:self-center">
-				<div class="text-lg max-w-md mx-auto text-white lg:max-w-sm lg:font-semibold lg:text-xl">
-					<p>
+				<div class="max-w-md mx-auto text-white lg:max-w-sm">
+					<p class="text-lg lg:text-xl lg:font-semibold">
 						Tri-State and partners are reducing wildfire risks while protecting the rich archaeological and
 						cultural
 						significance in Canyons of the Ancients.
 					</p>
-					<a href="https://tristate.coop/wildfire-mitigation" class="block mt-4 text-white">Read about our
-						fire mitigation efforts here</a>
+					<a href="https://tristate.coop/feature-wildfire-mitigation-canyon-of-the-ancients"
+						class="block mt-4 text-white"><span class="lg:font-semibold">Read about how we are protecting
+							history</span></a>
 				</div>
 			</div>
 		</div>
@@ -343,6 +344,39 @@
 	</section>
 
 
+	<section class="bg-[#6EA3A2] p-12 py-16">
+		<h2 class="pb-6 font-normal leading-9 text-center text-white headline-2">Download Past Annual Reports</h2>
+		<div class="grid max-w-lg grid-flow-row gap-8 mx-auto place-content-center">
+			<p><a class="inline-flex items-center gap-2 px-4 py-2 font-normal text-white no-underline transition-transform border border-solid border-white rounded-full "
+					href="https://tristate.coop/sites/default/files/PDF/Annual%20reports/2024%20Annual%20Report_FNL.pdf"
+					target="_blank" rel="noopener"><img
+						src="https://tristate.coop/sites/default/files/images/annual-report/2024/arrow-down-solid-white.svg"
+						alt="Arrow Down Icon" class="w-4 h-4 mt-1"><span class="hideme sm:inline">Download</span>
+					2024
+					Annual Report</a></p>
+			<p><a class="inline-flex items-center gap-2 px-4 py-2 font-normal text-white no-underline transition-transform border border-solid border-white rounded-full"
+					href="https://tristate.coop/sites/default/files/PDF/Annual%20reports/2023%20Tri-State%20Annual%20Report.pdf"
+					target="_blank" rel="noopener"><img
+						src="https://tristate.coop/sites/default/files/images/annual-report/2024/arrow-down-solid-white.svg"
+						alt="Arrow Down Icon" class="w-4 h-4 mt-1"><span class="hideme sm:inline">Download</span>
+					2023
+					Annual Report</a></p>
+
+
+			<p><a class="inline-flex items-center gap-2 px-4 py-2 font-normal text-white no-underline transition-transform border border-solid border-white rounded-full"
+					href="https://tristate.coop/sites/default/files/PDF/Annual%20reports/2022%20Tri-State%20Annual%20Report.pdf"
+					target="_blank" rel="noopener"><img
+						src="https://tristate.coop/sites/default/files/images/annual-report/2024/arrow-down-solid-white.svg"
+						alt="Arrow Down Icon" class="w-4 h-4 mt-1"><span class="hideme sm:inline">Download</span>
+					2022
+					Annual Report</a></p>
+
+
+
+
+		</div>
+
+	</section>
 
 
 
