AR: Fix CWB collision

--- a/annual-report-2025.htm
+++ b/annual-report-2025.htm
@@ -250,10 +250,10 @@
 
 			<div class="relative overflow-hidden flex flex-col">
 
-				<div class="px-8 sm:w-fit sm:place-self-center md:pl-8 lg:pl-12 lg:max-w-sm">
+				<div class="px-8 mb-6 sm:w-fit sm:place-self-center md:pl-8 lg:pl-12 lg:max-w-sm">
 					<img src="https://tristate.coop/sites/default/files/images/annual-report/2025/flexing.svg"
 						alt="Flexing Our Cooperative Strength" class="mx-auto mb-4 w-full lg:max-w-96" />
-					<p class="font-light text-balance mb-6 text-2xl text-gray-700 lg:text-2xl">
+					<p class="font-light text-balance text-2xl text-gray-700 lg:text-2xl">
 						Our actions are guided by our Cooperative Principles.
 					</p>
 				</div>
