--- a/battery-resource.htm
+++ b/battery-resource.htm
@@ -52,8 +52,8 @@
 	<section class="grid sm:grid-cols-2 sm:min-h-[400px]">
 		<div>
 			<div class="relative aspect-video sm:aspect-auto sm:h-full">
-				<img src="https://placehold.co/800x600/png?text=solar+array" alt="Solar array"
-					class="absolute inset-0 w-full h-full object-cover" />
+				<img src="https://tristate.coop/sites/default/files/images/escalante-solar-800x485.jpg"
+					alt="Solar array" class="absolute inset-0 w-full h-full object-cover" />
 			</div>
 		</div>
 		<div>
@@ -148,8 +148,16 @@
 	<section class="grid sm:grid-cols-2 sm:min-h-[400px]">
 		<div>
 			<div class="relative aspect-video sm:aspect-auto sm:h-full">
-				<img src="assets/images/ts-line-repair.jpg" alt="Line repair work"
-					class="absolute inset-0 w-full h-full object-cover" />
+				<figure class="relative w-full h-full">
+					<img src="assets/images/ts-line-repair.jpg" alt="Line repair work"
+						class="absolute h-full w-full object-cover">
+					<figcaption
+						class="absolute box-border bottom-0 z-10 h-auto bg-black/50 w-full text-white text-center border-0">
+						<a href="https://tristate.coop/storm-response-illustrates-importance-planning-collaboration-and-resiliency"
+							class="text-white">Navigating
+							storm response at Tri-State</a>
+					</figcaption>
+				</figure>
 			</div>
 		</div>
 		<div class="sm:order-first">
