wip(battery): New solar image.  Layout adjustments.

--- a/battery-resource.htm
+++ b/battery-resource.htm
@@ -52,8 +52,8 @@
 	<section class="grid sm:grid-cols-2 sm:min-h-[400px]">
 		<div>
 			<div class="relative aspect-video sm:aspect-auto sm:h-full">
-				<img src="https://tristate.coop/sites/default/files/images/escalante-solar-800x485.jpg"
-					alt="Solar array" class="absolute inset-0 w-full h-full object-cover" />
+				<img src="assets/images/escalante-solar-nm-event-2023-021.jpg" alt="Solar array"
+					class="absolute inset-0 w-full h-full object-cover" />
 			</div>
 		</div>
 		<div>
@@ -215,23 +215,31 @@
 	</section>
 	<section class="grid sm:grid-cols-2 sm:min-h-[400px]">
 		<div>
-			<div class="px-8 py-12 sm:text-left text-center flex items-center h-full">
-				<div class="space-y-4 max-w-md mx-auto">
-					<p>
+			<div
+				class="flex items-center justify-center relative h-full w-full text-[#3d4d55] bg-white overflow-hidden">
+
+				<span
+					class="absolute top-0 left-0 bg-[url('https://tristate.coop/sites/default/files/images/esg/quote.svg')] bg-contain bg-no-repeat bg-left-top -translate-y-1/4 z-0"
+					style="width:clamp(110px,25vw,220px); height:clamp(110px,25vw,220px)"></span>
+				<span
+					class="absolute bottom-0 right-0 bg-[url('https://tristate.coop/sites/default/files/images/esg/quote.svg')] bg-contain bg-no-repeat bg-left-top z-0"
+					style="width:clamp(110px,25vw,220px); height:clamp(110px,25vw,220px); transform: rotate(180deg) translate(0%, -25%)"></span>
+				<figure class="grid place-content-center p-6 relative z-10 min-h-[400px] lg:px-12">
+					<blockquote
+						class="m-0 p-0 border-0  font-bold text-justify  text-gray-900 lg:text-lg lg:leading-tight">
 						If we can get in and do these large-scale projects, it may be
 						expensive up front but think it's really important for public
 						health and safety. It's all about keeping the lights on and
 						doing everything we can to protect the communities we serve
 						and that starts with protecting the infrastructure that
 						transmits their power.
-					</p>
-					<p class="text-sm">
+					</blockquote>
+					<figcaption class="p-0 mt-5 border-0 text-[1.2rem] font-light text-[#719ab8] font-serif">
 						Nicole Viz, Department of Energy<br>
 						Fellow at Tri-State
-					</p>
-				</div>
+					</figcaption>
+				</figure>
 			</div>
-
 		</div>
 		<div class="sm:order-first">
 			<div class="bg-navy text-white px-8 py-12 sm:text-left text-center flex items-center h-full">
