chore(battery): Add link to index page

--- a/index.htm
+++ b/index.htm
@@ -35,6 +35,20 @@
 		<ul role="list" class="grid grid-cols-1 gap-x-6 gap-y-8 lg:grid-cols-3 xl:gap-x-8">
 			<li class="overflow-hidden rounded-xl border border-slate-200 bg-white">
 				<div class="flex justify-between bg-slate-50 p-6">
+					<div class="font-serif font-medium">Resources</div>
+					<dt class="text-sm opacity-80">Last updated</dt>
+				</div>
+				<dl class="divide-y divide-slate-200 px-6 py-4">
+					<div class="flex justify-between gap-x-4 py-3">
+						<dt class="text-slate-500"><a href="./battery-resource.htm" target="_blank"
+								class="text-slate-900 hover:underline">Battery</a></dt>
+						<dd class="text-sm text-slate-500">June 11, 2025</dd>
+					</div>
+
+				</dl>
+			</li>
+			<li class="overflow-hidden rounded-xl border border-slate-200 bg-white">
+				<div class="flex justify-between bg-slate-50 p-6">
 					<div class="font-serif font-medium">OBR</div>
 					<dt class="text-sm opacity-80">Last updated</dt>
 				</div>
