feat(battery: Small adjustments to v1

--- a/battery-resource.htm
+++ b/battery-resource.htm
@@ -98,8 +98,10 @@
 				some common battery technologies that support utility-scale use.
 			</p>
 		</div>
-		<div class="flex flex-wrap justify-center text-center mt-8">
-			<div class="w-full sm:w-1/2 xl:w-1/4 px-4 pb-8 box-border">
+
+		<!-- mt-8 grid grid-cols-1 sm:grid-cols-2 xl:max-w-3xl gap-8 text-center xl:mb-12 -->
+		<div class="mt-8 grid grid-cols-1 sm:grid-cols-2 xl:grid-cols-4 gap-8 text-center xl:mb-12">
+			<div class="px-4 xl:px-0">
 				<div class="text-lg font-semibold">Lithium</div>
 				<div>The most widely used type of
 					utility-scale battery, lithium
@@ -111,7 +113,7 @@
 					integrating stored renewable
 					energy sources.</div>
 			</div>
-			<div class="w-full sm:w-1/2 xl:w-1/4 px-4 pb-8 box-border">
+			<div class="px-4 xl:px-0">
 				<div class="text-lg font-semibold">Flow</div>
 				<div>A unique type of utility-scale
 					battery where energy is stored in
@@ -122,7 +124,7 @@
 					consistent power over extended
 					periods oftime.</div>
 			</div>
-			<div class="w-full sm:w-1/2 xl:w-1/4 px-4 pb-8 box-border">
+			<div class="px-4 xl:px-0">
 				<div class="text-lg font-semibold">Lead-acid</div>
 				<div>Used for short-term energy storage
 					and backup power, these are one
@@ -133,7 +135,7 @@
 					used due to their costeffectiveness
 					and reliability.</div>
 			</div>
-			<div class="w-full sm:w-1/2 xl:w-1/4 px-4 pb-8 box-border">
+			<div class="px-4 xl:px-0">
 				<div class="text-lg font-semibold">Sodium-sulfur</div>
 				<div>High-temperature batteries that
 					have high energy density and
@@ -234,7 +236,8 @@
 						and that starts with protecting the infrastructure that
 						transmits their power.
 					</blockquote>
-					<figcaption class="p-0 mt-5 border-0 text-[1.2rem] font-light text-[#719ab8] font-serif">
+					<figcaption
+						class="p-0 mt-5 border-0 text-[1.2rem] font-light text-[#719ab8] font-serif leading-tight">
 						Nicole Viz, Department of Energy<br>
 						Fellow at Tri-State
 					</figcaption>
